# modular-fastapi

./: README.md  pyproject.toml  supergraph-schema.graphql  supergraph.yaml
app/: main.py
app/core/: main.py
app/core/routing/: APIRouter.py
app/example_module/routes/: examples.py
app/modules/example_module/schema/: app.py
