[tool.poetry]
name = "modular-fastapi"
version = "0.1.0"
description = "A modular FastAPI framework"
authors = ["DavidWard98 <david.ae.ward@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.127.0"}

[tool.poetry.dev-dependencies]
uvicorn = "^0.18.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"